--- a/src/routes/02-component-patterns/styles/styles.module.css
+++ b/src/routes/02-component-patterns/styles/styles.module.css
@@ -60,3 +60,7 @@
 .buttonAdd:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
+.disabled{
+    border-color:grey !important;
+    border-left: white !important;
+}
